Adicionado a arquivo de tabela, head e arquivos relacionado a meta

--- a/urls-caminhos/urls-caminhos.html
+++ b/urls-caminhos/urls-caminhos.html
@@ -14,6 +14,16 @@
         - entrando em diretórios
         - saíndo em diretórios
         - diretórios raiz( root ou pai)
+
+    - URLs absolutos vs relativos
+        - Absolutos
+            - inclui o protocolo e o nome do domínio
+                - https://www.google.com
+            - sempre apontará para o mesmo local
+
+        - Relativos
+            - relativo a página aberto no momento
+            - apontará para lugares diferentes
  -->
 
  <a href="../hyperLink.html">arquivo na pasta anterior</a>
@@ -23,3 +33,8 @@
  <a href="index2.html">Arquivo no diretório raiz</a>
  <br>
  <a href="../semantica.html">Arquivos em outra pasta, que está na pasta anterior</a>
+<br><br><br><br>
+ <!-- relativos e absolutos -->
+ <a href="google.com">relativo: na pasta local</a>
+ <br>
+ <a href="https://google.com">absoluto</a>
